lab_01: добавлены API-методы для избранных серверов
